      size and the current size) is out of range.
  * Preseed tzsetup/selected up-front rather than filtering it and then
    preseeding it; filtering it causes the backup state to be reset, which
    causes an infinite loop when backing up from the timezone page when the
    default country only has one timezone (LP: #361674).

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 15 Apr 2009 12:58:09 +0100

ubiquity (1.12.9) jaunty; urgency=low

  * Update timezone map images.  Slight changes to the color and size of the
    time zone time box.

 -- Evan Dandrea <evand@ubuntu.com>  Tue, 14 Apr 2009 12:02:13 +0100

ubiquity (1.12.8) jaunty; urgency=low

  [ Roman Shtylman ]
  * KDE frontend:
    - Fix display of automatic partitioning choices (LP: #358519).

  [ Colin Watson ]
  * GTK frontend:
    - Fix window icon; gtk.window_set_default_icon_from_file seems to work
      better if it's called before the window is created (LP: #358961).
  * Update translations from Launchpad.

 -- Colin Watson <cjwatson@ubuntu.com>  Sun, 12 Apr 2009 23:59:59 +0100

ubiquity (1.12.7) jaunty; urgency=low

  [ Evan Dandrea ]
  * Draw a box around the time zone text and a highlight around the time
    zone point so that they are more legible.

  [ Colin Watson ]
  * Stop error images always being shown on the user page (LP: #358548). The
    GTK frontend got away with this because the widgets in question are
    hidden in the glade file; the KDE frontend wasn't so lucky.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 09 Apr 2009 18:16:39 +0100

ubiquity (1.12.6) jaunty; urgency=low

  [ Colin Watson ]
  * GTK frontend:
    - Copy-and-paste gdm-signal from powermanagement-interface, since that
      package is no longer in main and is slated to go away. In future we
      ought to be able to use gnome-session D-BUS calls or similar for this
      work (LP: #357101).
  * Use gksudo --preserve-env / sudo -E so that we can check DESKTOP_SESSION